# AWS-Soda-Agent

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
assets/: soda-agent-architecture.drawio
env/: README.md  common.hcl  env.hcl  root.hcl
env/stack/: stack-globals.hcl
env/stack/soda-agent/: README.md  root.hcl
env/stack/soda-agent/addons/soda-agent/: terragrunt.hcl
env/stack/soda-agent/bootstrap/: terragrunt.hcl
env/stack/soda-agent/eks/: terragrunt.hcl
env/stack/soda-agent/eks/ops-ec2-eks-access/: terragrunt.hcl
env/stack/soda-agent/network/vpc/: terragrunt.hcl
env/stack/soda-agent/network/vpc-endpoints/: terragrunt.hcl
env/stack/soda-agent/ops/ec2-ops/: terragrunt.hcl
env/stack/soda-agent/ops/ec2-ops/user-data/: install_ops_box.sh.tmpl
env/stack/soda-agent/ops/sg-ops/: terragrunt.hcl
module/application/helm/soda-agent/: README.md  main.tf  variables.tf
module/compute/ec2/ops/: README.md  main.tf  outputs.tf  variables.tf
module/compute/eks/cluster/: README.md  main.tf  outputs.tf  variables.tf
module/network/vpc/: README.md  main.tf  outputs.tf  variables.tf
module/network/vpc-endpoints/: README.md  main.tf  outputs.tf  variables.tf
module/security/iam/ops-eks-access/: README.md  main.tf
module/security/security-group/ops/: README.md  main.tf  outputs.tf  variables.tf
src/aws_soda_agent/: __init__.py  cli.py  orchestrator.py  shell.py
