[project]
name = "aws-soda-agent"
version = "0.1.6"
description = "UV CLI for AWS Soda Agent deploy/destroy orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
soda-agent = "aws_soda_agent.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
